--- a/app/views/templates/_header.html
+++ b/app/views/templates/_header.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <head>
     <title>Wechat Menu</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/style.css">
+    <link rel="stylesheet" type="text/css" href="static/css/style.css">
 </head>
 <body>
 
-<script src="/static/js/angular.min.js"></script>
+<script src="static/js/angular.min.js"></script>
