--- a/app/views/templates/menu.html
+++ b/app/views/templates/menu.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<script type="text/javascript" src="/static/js/menu.js"></script>
+<script type="text/javascript" src="static/js/menu.js"></script>
 
 <div ng-controller="MenuCtrl">
 
