--- a/app/views/templates/_header.html
+++ b/app/views/templates/_header.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-    <title>Wechat Menu</title>
+    <title>微信公众号设置</title>
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
 </head>
 <body>
